[package]
name = "spyhunt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
reqwest = "0.12.9"
scraper = "0.21.0"
soup = "0.5.1"
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["full"] }
regex = "1.11.1"
