[package]
name = "spyhunt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
reqwest = { version = "0.12.9", features = [ "json" ]} #, "blocking" ]}
scraper = "0.22.0"
soup = "0.5.1"
rand = "0.8.5"
tokio = { version = "1.42.0", features = ["full"] }
regex = "1.11.1"
serde_json = "1.0.133"
serde = { version= "1.0.215", features =["derive"]}
dns-lookup = "2.0.4"
