[package]
name = "spyhuntrs"
version = "0.1.0"
edition = "2021"
authors = ["potato"]
description = "A comprehensive network scanning and vulnerability assessment tool."
license = "MIT"


[dependencies]
colored = "2.1.0"
reqwest = { version = "0.12.9", features = [ "json" , "blocking" ]}
scraper = "0.22.0"
soup = "0.5.1"
rand = "0.8.5"
futures = "0.3.31"
tokio = { version = "1.42.0", features = ["full"] }
regex = "1.11.1"
serde_json = "1.0.133"
serde = { version = "1.0.215", features = ["derive"]}
dns-lookup = "2.0.4"
shodan-client = "0.1.1"
murmur3 = "0.5.2"
base64 = "0.22.1"
rayon = "1.10.0"
murmurhash3 = "0.0.5"
cidr = "0.3.0"
htmlescape = "0.3.1"
urlencoding = "2.1.3"
clap = { version = "4.5.23", features = ["derive"] }
clap_derive = "4.5.18"
strip-ansi-escapes = "0.2.0"
tokio-stream = "0.1.17"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
